<resources>
    <string name="app_name">SHAKEit</string>
    <string name="shake_it">SHAKE IT</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="faq">FAQ</string>
    <string name="about_us">ABOUT US</string>
    <string name="leave_a_feedback">LEAVE A FEEDBACK</string>
    <string name="share">share</string>
    <string name="settings">SETTINGS</string>
    <string name="alerts">ALERTS</string>
    <string name="am_i_ready">AM I READY</string>
    <string name="preparation">PREPARATION</string>
    <string name="i_am_safe">I AM SAFE</string>
    <string name="emergeny">EMERGENCY</string>
    <string name="location">LOCATION</string>
    <string name="a_du_eee_creation">A DU EEE CREATION</string>
    <string name="message">Message</string>
    <string name="enter_number">Enter Number</string>
    <string name="location_is_here">LOCATION IS HERE</string>
    <string name="title_activity_preparation">Preparation</string>
    <string name="textview">Preparation screen</string>
    <string name="donate">DONATE</string>
    <string name="tools">TOOLS</string>
    <string name="locate_me">LOCATE ME</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_locate_me">Locate Me</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_ami_ready">Am I Ready</string>
    <string name="title_activity_ami_safe">Am I Safe</string>
    <string name="to_do">To Do</string>
    <string name="flashLightTV">Flash Light</string>
    <string name="strobeLightTV">Strobe Light</string>
    <string name="sirenTV">Siren</string>
    <string name="radioTV">Radio</string>
    <string name="title_activity_to_do">ToDo</string>
    <string name="beforeTV">BEFORE</string>
    <string name="duringTV">During</string>
    <string name="afterTV">After</string>
    <string name="sendMsg">Send Message</string>
    <string name="updateSafeInfoBtn">Update Informations</string>
    <string name="quizTitle">You have to know</string>
    <string name="bloodBanks">Phone number of blood banks</string>
    <string name="red_crescent_blood_bank">Red Crescent Blood Bank</string>
    <string name="quantum_blood_bank">Quantum Blood Bank</string>
    <string name="islami_bank_hospital_blood_bank">Islami Bank Hospital Blood Bank</string>
    <string name="flash">FLASH</string>
    <string name="strobe_light">STROBE LIGHT</string>
    <string name="siren">SIREN</string>
    <string name="radio">RADIO</string>
    <string name="what_to_do">WHAT TO DO</string>
    <string name="hhhhhhhh_jhf_uh_huh">hhhhhhhh jhf uh huh</string>
    <string name="hhhhhhhh_jfghf_uh_huh">hhhhhhhh jfghf uh huh</string>
    <string name="hhhhhhhh_jhf_uh_khkojhuh">hhhhhhhh jhf uh khkojhuh</string>
    <string name="hhhhhhhh_jhf_udfdfgh_huh">hhhhhhhh jhf udfdfgh huh</string>
    <string name="hhhhhhhh_jhf_uhkhuh">hhhhhhhh jhf uhkhuh</string>
    <string name="hhhhhhhh_jhf_uh_jklhhuh">hhhhhhhh jhf uh jklhhuh</string>
    <string name="hhhhhhhh_jhf_uh_hytrfyhuh">hhhhhhhh jhf uh hytrfyhuh</string>
    <string name="hhhhhhhh_jhf_udsfsdfh_huh">hhhhhhhh jhf uh huh</string>
    <string name="hhhhhhsdshh_jhf_uh_huh">hhhhhhhh jhf uh huh</string>
    <string name="hhhhhhhh_jhf_uhsds_huh">hhhhhhhh jhf uh huh</string>
    <string name="hhhhhhhh_jhf_suh_huh">hhhhhhhh jhf uh huh</string>
</resources>
