<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_menu_1"
        android:title="@string/faq"
        android:icon="@drawable/faq"/>

    <item android:id="@+id/nav_menu_2"
        android:title="@string/about_us"
        android:icon="@drawable/more"/>

    <item android:id="@+id/nav_menu_3"
        android:title="@string/tools"
        android:icon="@drawable/repairtools"/>

    <item android:id="@+id/nav_menu_4"
        android:title="@string/leave_a_feedback"
        android:icon="@drawable/feedback"/>


    <item android:id="@+id/nav_menu_5"
        android:title="@string/share"
        android:icon="@drawable/network"/>

    <item android:id="@+id/nav_menu_6"
        android:title="@string/settings"
        android:icon="@drawable/cogwheel"/>


</menu>