<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_before"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.om3g4.shakeit.Before">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf"
            android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/before1TV"
                    android:text="@string/hhhhhhhh_jhf_uh_huh"
                    android:textColor="@color/fontColor1"
                    android:textSize="20sp"
                    android:background="@drawable/background2"
                    android:padding="10sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/before2TV"
                    android:text="@string/hhhhhhhh_jfghf_uh_huh"
                    android:textColor="@color/fontColor1"
                    android:textSize="20sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/background1"
                    android:padding="10sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/before3TV"
                    android:text="@string/hhhhhhhh_jhf_uh_khkojhuh"
                    android:textColor="@color/fontColor1"
                    android:textSize="20sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/background3"
                    android:padding="10sp"
                    />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/before4TV"
                android:text="@string/hhhhhhhh_jhf_udfdfgh_huh"
                android:textColor="@color/fontColor1"
                android:textSize="20sp"
                android:background="@drawable/background4"
                android:padding="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/before5TV"
                android:text="@string/hhhhhhhh_jhf_uhkhuh"
                android:textColor="@color/fontColor1"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/background1"
                android:padding="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/before6TV"
                android:text="@string/hhhhhhhh_jhf_uh_jklhhuh"
                android:textColor="@color/fontColor1"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/background2"
                android:padding="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/before7TV"
                android:text="@string/hhhhhhhh_jhf_uh_hytrfyhuh"
                android:textColor="@color/fontColor1"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/background3"
                android:padding="10sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/before"
                android:layout_weight="0.62" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
