<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/needit"
    android:fitsSystemWindows="true"
    tools:context="com.example.om3g4.shakeit.MainActivity"
    android:id="@+id/drawerLayout"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button"
            android:background="@drawable/list"
            android:layout_above="@+id/textView3"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button2"
            android:background="@drawable/bracelet"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button3"
            android:background="@drawable/global"
            android:layout_above="@+id/button5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button4"
            android:background="@drawable/technology"
            android:layout_above="@+id/textView8"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button5"
            android:background="@drawable/siren"
            android:layout_above="@+id/textView7"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button6"
            android:background="@drawable/warning"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button7"
            android:background="@drawable/happy"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alerts"
            android:id="@+id/textView2"
            android:textColor="#d2cdcd"
            android:layout_below="@+id/button6"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/am_i_ready"
            android:id="@+id/textView3"
            android:textColor="#ffffff"
            android:layout_below="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/preparation"
            android:id="@+id/textView4"
            android:textColor="#c6c2c2"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/i_am_safe"
            android:id="@+id/textView5"
            android:textColor="#faf8f8"
            android:layout_below="@+id/button7"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/maps"
            android:id="@+id/textView6"
            android:textColor="#faf8f8"
            android:layout_below="@+id/button3"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/emergeny"
            android:id="@+id/textView7"
            android:textColor="#faf8f8"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"
            android:id="@+id/textView8"
            android:textColor="#faf8f8"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
